--- a/style.css
+++ b/style.css
@@ -39,9 +39,27 @@ html {
 
     display: grid;
     gap: var(--gap-1);
-    padding: var(var(--gap-1));
+    padding: var(--gap-1);
 }
 
+.card {
+    background-color: white;
+    box-shadow: 0 0 .3rem #eee;
+    display: grid;
+    place-items: center;
+    border-radius: var(--gap-1);
+    cursor: pointer;
+}
+
+.card img {
+    width: 100%;
+    height: 100%;
+    /* scale down make sure the content is displayed 
+    as large as possible while ditll fitting within the container*/
+    object-fit: scale-down;
+    
+
+}
 .modal {
     position: fixed;
     inset: 0;
